# SpinWaveGenie

./: .appveyor.yml  .clang-format  .gitmodules  .travis.yml  AppveyorPython27-x64.cmake  AppveyorPython35-x64.cmake  AppveyorPython36-x64.cmake  AppveyorPython37-x64.cmake  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  LICENSE  README.md  SpinWaveGenie.cmake  SpinWaveGenie.spec.in  appveyor.cmake  appveyorVC140.cmake
examples/: 2AFMChain.xml  2FMChain.xml  2sl_cell.xml  4sl_cell.xml  AFMChain.xml  CMakeLists.txt  CoV2O4_DFT.xml  FMChain.xml  MnF2.xml  MnV2O4.xml  MnV2O4_111.xml  SpinWaveGenie.xml  SpinWaveGenieSchema.xsd  YFeO3FourSublattice.xml  YFeO3TwoSublattice.xml  YFeO3_2_K_m3.py  longFMChain.xml
examples/AFMChain/: AFMChain.py  AFMavg.py  CMakeLists.txt  Dispersion.cpp  PowderAverage.cpp  PowderAverage.py  TwoDimensionalCut.cpp
examples/FMChain/: CMakeLists.txt  Dispersion.cpp  FM.py  FMavg.py  PowderAverage.cpp  TwoDimensionalCut.cpp
examples/Villain/: CMakeLists.txt  FMDispersion.cpp  SC1Dispersion.cpp  SC2Dispersion.cpp
examples/YFeO3/: CMakeLists.txt  CommonFunctions.cpp  CommonFunctions.h  TwoDimensionalCut.cpp  YFeO3_2_K_m2.py  YFeO3_3_0_L.py  YFeO3_3_1_L.py
examples/old/: 2AFMChain.xml  CoV2O4_DFT.xml  MnBiJ123.xml  MnF2.xml  MnV2O4.xml  SpinWaveGenie.xml  YFeO3FourSublattice.xml
libSpinWaveGenie/: CMakeLists.txt  SpinWaveGenieConfig.cmake
libSpinWaveGenie/Documentation/: compile_guide.dox  compile_guide_linux_generic.dox  compile_guide_linux_rhel.dox  compile_guide_mac.dox  examples.dox  index.dox
libSpinWaveGenie/include/SpinWaveGenie/: Memory.h  SpinWaveGenie.h
libSpinWaveGenie/src/: CMakeLists.txt
libSpinWaveGenie/src/Cell/: Cell.cpp  Neighbors.cpp  Sublattice.cpp
libSpinWaveGenie/src/Containers/: Cell.cpp  Energies.cpp  HKLDirections.cpp  PointsAlongLine.cpp  Results.cpp  Sublattice.cpp
libSpinWaveGenie/src/Genie/: MagneticFormFactor.cpp  Neighbors.cpp  SpinWave.cpp  SpinWaveBuilder.cpp
libSpinWaveGenie/src/Interactions/: AnisotropyInteraction.cpp  CMakeLists.txt  DM_Y_Interaction.cpp  DM_Z_Interaction.cpp  ExchangeInteraction.cpp  ExchangeInteractionSameSublattice.cpp  Interaction.cpp  InteractionFactory.cpp  InteractionsContainer.cpp  MagneticFieldInteraction.cpp
libSpinWaveGenie/src/Plot/: AdaptiveBoole.cpp  AdaptiveBoole.h  AdaptiveSimpson.cpp  AdaptiveSimpson.h  GaussKronrod.cpp  (+16 more)
libSpinWaveGenie/test/: AFMDispersionTest.cpp  AdaptiveSimpsonTest.cpp  CMakeLists.txt  CellTest.cpp  EnergiesTest.cpp  EnergyResolutionFunctionTest.cpp  FMDispersionTest.cpp  FormFactorTest.cpp  HKLDirectionsTest.cpp  IntegrateEnergyTest.cpp  IntegrateThetaPhiTest.cpp  InteractionFactoryTest.cpp  InteractionsContainerTest.cpp  MagneticFieldInteractionTest.cpp  NeighborsTest.cpp  PointsAlongLineTest.cpp  ResultsTest.cpp  SublatticeTest.cpp  ThreeVectorsTest.cpp  UniqueThreeVectorsTest.cpp
pythonapi/: CMakeLists.txt  __init__.py
pythonapi/src/: SpinWaveGenie.cpp
pythonapi/test/: CMakeLists.txt  CellTest.py  FMDispersionTest.py  InteractionFactoryTest.py  NeighborsTest.py  SpinWaveBuilderTest.py  SublatticeTest.py  ThreeVectorsTest.py  UniqueThreeVectorsTest.py
src/: CMakeLists.txt  CalculateAngles.cpp  CalculateAngles.h  Cell.h  Doxyfile  EnergyResolutionFunction.cpp  EnergyResolutionFunction.h  Initializer.cpp  Initializer.h  IntegrateAxes.cpp  IntegrateAxes.h  IntegrateThetaPhi.cpp  IntegrateThetaPhi.h  Interaction.h  MagneticFormFactor.cpp  MagneticFormFactor.h  OneDimensionalFactory.cpp  OneDimensionalFactory.h  OneDimensionalGaussian.cpp  OneDimensionalGaussian.h  OneDimensionalLorentzian.cpp  OneDimensionalLorentzian.h  OneDimensionalPseudoVoigt.cpp  OneDimensionalPseudoVoigt.h  OneDimensionalShapes.cpp  OneDimensionalShapes.h  PointsAlongLine.cpp  PointsAlongLine.h  SW_Builder.cpp  SW_Builder.h  SW_Matrix.cpp  SW_Matrix.h  SW_Matrix.ps  SW_sublattice.cpp  SW_sublattice.h  SpinWave.cpp  SpinWave.h  SpinWaveDispersion.cpp  SpinWaveDispersion.h  SpinWavePlot.cpp  (+20 more)
src/Cell/: Atom.cpp  Atom.h  AtomIterator.cpp  AtomIterator.h  Cell.cpp  Cell.h  Cell.ps  CellIter.old  Cell_h.ps  Matrices.h  Neighbors.cpp  Neighbors.h  Sublattice.cpp  Sublattice.h
src/Containers/: Energies.cpp  Energies.h  HKLDirections.cpp  HKLDirections.h  Matrices.cpp  Matrices.h  PointsAlongLine.cpp  PointsAlongLine.h  Positions.cpp  Positions.h  Results.cpp  Results.h  ThreeVectors.h  UniquePositions.cpp  UniqueThreeVectors.h
src/Documentation/: compile_guide.dox  compile_guide_linux_rhel.dox  examples.dox  index.dox
src/Genie/: MagneticFormFactor.cpp  MagneticFormFactor.h  SW_Builder.cpp  SW_Builder.h  SpinWave.cpp  SpinWave.h  SpinWaveBuilder.cpp  SpinWaveBuilder.h
src/Interactions/: Anis_X_Interaction.cpp  Anis_X_Interaction.h  Anis_Y_Interaction.cpp  Anis_Y_Interaction.h  Anis_Z_Interaction.cpp  Anis_Z_Interaction.h  AnisotropyInteraction.cpp  AnisotropyInteraction.h  DM_Y_Interaction.cpp  DM_Y_Interaction.h  DM_Z_Interaction.cpp  DM_Z_Interaction.h  Exch_Interaction.cpp  Exch_Interaction.h  ExchangeInteraction.cpp  ExchangeInteraction.h  ExchangeInteractionSameSublattice.cpp  ExchangeInteractionSameSublattice.h  Interaction.cpp  Interaction.h  InteractionFactory.cpp  InteractionFactory.h  MagneticFieldInteraction.cpp  MagneticFieldInteraction.h
src/SpinWavePlot/: EnergyResolutionFunction.cpp  EnergyResolutionFunction.h  IntegrateAxes.cpp  IntegrateAxes.h  IntegrateThetaPhi.cpp  IntegrateThetaPhi.h  OneDimensionalFactory.cpp  OneDimensionalFactory.h  OneDimensionalGaussian.cpp  OneDimensionalGaussian.h  OneDimensionalLorentzian.cpp  OneDimensionalLorentzian.h  OneDimensionalPseudoVoigt.cpp  OneDimensionalPseudoVoigt.h  OneDimensionalShapes.h  SpinWavePlot.h  TwoDGaussian.cpp  TwoDGaussian.h  TwoDimensionCut.cpp  TwoDimensionCut.h  TwoDimensionalGaussian.cpp  TwoDimensionalGaussian.h
src/src/: IntegrateAxes.cpp
test/: CMakeLists.txt  CellTest.cpp  EnergiesTest.cpp  FormFactorTest.cpp  HKLDirectionsTest.cpp  NeighborsTest.cpp  PointsAlongLineTest.cpp  ResultsTest.cpp  SublatticeTest.cpp  ThreeVectorsTest.cpp  UniqueThreeVectorsTest.cpp  test_sublattice.cpp
(+93 files in other folders)
