add_executable(AFMDispersion AFMChain/Dispersion.cpp)
target_link_libraries( AFMDispersion PRIVATE SpinWaveGenie)
add_executable(AFMcut AFMChain/TwoDimensionalCut.cpp)
target_link_libraries( AFMcut PRIVATE SpinWaveGenie)
add_executable(AFMPowderAverage AFMChain/PowderAverage.cpp)
target_link_libraries( AFMPowderAverage PRIVATE SpinWaveGenie)

add_executable(FMPowderAverage FMChain/PowderAverage.cpp)
target_link_libraries( FMPowderAverage PRIVATE SpinWaveGenie)
add_executable(FMDispersion FMChain/Dispersion.cpp)
target_link_libraries( FMDispersion PRIVATE SpinWaveGenie)
add_executable(FMcut FMChain/TwoDimensionalCut.cpp)
target_link_libraries( FMcut PRIVATE SpinWaveGenie)

add_executable(VillainSC2Dispersion Villain/SC2Dispersion.cpp)
target_link_libraries( VillainSC2Dispersion PRIVATE SpinWaveGenie)
add_executable(VillainSC1Dispersion Villain/SC1Dispersion.cpp)
target_link_libraries( VillainSC1Dispersion PRIVATE SpinWaveGenie ${NLOPT_LIBRARIES})
target_include_directories (VillainSC1Dispersion SYSTEM PRIVATE ${NLOPT_INCLUDE_DIRECTORY})
add_executable(VillainFMDispersion  Villain/FMDispersion.cpp)
target_link_libraries( VillainFMDispersion PRIVATE SpinWaveGenie)
