add_executable(AFMDispersion AFMChain/Dispersion.cpp)
target_link_libraries( AFMDispersion SpinWaveGenie)
add_executable(AFMcut AFMChain/TwoDimensionalCut.cpp)
target_link_libraries( AFMcut SpinWaveGenie)
add_executable(AFMPowderAverage AFMChain/PowderAverage.cpp)
target_link_libraries( AFMPowderAverage SpinWaveGenie)

add_executable(FMPowderAverage FMChain/PowderAverage.cpp)
target_link_libraries( FMPowderAverage SpinWaveGenie)
add_executable(FMDispersion FMChain/Dispersion.cpp)
target_link_libraries( FMDispersion SpinWaveGenie)
add_executable(FMcut FMChain/TwoDimensionalCut.cpp)
target_link_libraries( FMcut SpinWaveGenie)

add_executable(VillainSC2Dispersion Villain/SC2Dispersion.cpp)
target_link_libraries( VillainSC2Dispersion SpinWaveGenie)
add_executable(VillainSC1Dispersion Villain/SC1Dispersion.cpp)
target_link_libraries( VillainSC1Dispersion SpinWaveGenie ${NLOPT_LIBRARIES})
target_include_directories(VillainSC1Dispersion SYSTEM PRIVATE ${NLOPT_INCLUDE_DIRECTORY})
add_executable(VillainFMDispersion  Villain/FMDispersion.cpp)
target_link_libraries( VillainFMDispersion SpinWaveGenie)
