add_subdirectory(AFMChain)
add_subdirectory(FMChain)
add_subdirectory(Villain)
#add_executable(VillainSC2Dispersion Villain/SC2Dispersion.cpp)
#target_link_libraries( VillainSC2Dispersion SpinWaveGenie)
#add_executable(VillainSC1Dispersion Villain/SC1Dispersion.cpp)
#target_link_libraries( VillainSC1Dispersion SpinWaveGenie ${NLOPT_LIBRARIES})
#target_include_directories(VillainSC1Dispersion SYSTEM PRIVATE ${NLOPT_INCLUDE_DIRECTORY})
#add_executable(VillainFMDispersion  Villain/FMDispersion.cpp)
#target_link_libraries( VillainFMDispersion SpinWaveGenie)
