include_directories(${EIGEN3_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${LOG4CPLUS_INCLUDE_DIRS} ${TBB_INCLUDE_DIRS} ${NLOPT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}) 
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS} ${TBB_LIBRARY_DIRS})
LINK_LIBRARIES(${Boost_LIBRARIES} ${TBB_LIBRARIES} ${NLOPT_LIBRARIES})

#add_subdirectory(Interactions)

file(GLOB SRCS *.cpp)
file(GLOB EXTERNAL_SRCS External/*.cpp External/*.c)
file(GLOB CELL_SRCS Cell/*.cpp)
file(GLOB CONTAINERS_SRCS Containers/*.cpp)
file(GLOB GENIE_SRCS Genie/*.cpp)
file(GLOB INTERACTIONS_SRCS Interactions/*.cpp)
SOURCE_GROUP("Source Files\\External" FILES ${EXTERNAL_SRCS})
SOURCE_GROUP("Source Files\\Cell" FILES ${CELL_SRCS})
SOURCE_GROUP("Source Files\\Containers" FILES ${CONTAINERS_SRCS})
SOURCE_GROUP("Source Files\\Genie" FILES ${GENIE_SRCS})
SOURCE_GROUP("Source Files\\Interactions" FILES ${INTERACTIONS_SRCS})

file(GLOB HDRS *.h)
file(GLOB EXTERNAL_HDRS External/*.h)
file(GLOB CELL_HDRS Cell/*.h)
file(GLOB CONTAINERS_HDRS Containers/*.h)
file(GLOB GENIE_HDRS Genie/*.h)
file(GLOB INTERACTIONS_HDRS Interactions/*.h)
SOURCE_GROUP("Header Files\\External" FILES ${EXTERNAL_HDRS})
SOURCE_GROUP("Header Files\\Cell" FILES ${CELL_HDRS})
SOURCE_GROUP("Header Files\\Containers" FILES ${CONTAINERS_HDRS})
SOURCE_GROUP("Header Files\\Genie" FILES ${GENIE_HDRS})
SOURCE_GROUP("Header Files\\Interactions" FILES ${INTERACTIONS_HDRS})

set(ALL_SRCS ${SRCS} ${EXTERNAL_SRCS} ${EXTERN_SRCS} ${CELL_SRCS} ${CONTAINERS_SRCS} ${GENIE_SRCS} ${INTERACTIONS_SRCS}) 
set(ALL_HDRS ${HDRS} ${EXTERNAL_HDRS} ${EXTERN_HDRS} ${CELL_HDRS} ${CONTAINERS_HDRS} ${GENIE_HDRS} ${INTERACTIONS_HDRS})

add_executable(spin_wave_genie ${ALL_SRCS} ${ALL_HDRS})
